# Lyceum

./: .gitignore  README.md  TRACKER.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  KEYBINDINGS.md  RISKS.md  ROADMAP.md  SETTINGS_SCHEMA.md
scripts/: check-bundle-size.mjs  check-version-consistency.mjs  cleanup-macos-bundle.mjs  path-boundary.mjs  release-gates.test.mjs  run-tauri.mjs
scripts/macos-shims/: hdiutil
src/: App.test.tsx  App.tsx  main.tsx  perf.test.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_info.rs  file_ops.rs  fs_ops.rs  git.rs  julia.rs  latex.rs  lib.rs  lsp.rs  macos_service.rs  main.rs  menu.rs  path_access.rs  search.rs  terminal.rs  walk.rs  window_ops.rs  workspace_paths.rs  workspace_watch.rs
src/commands/: builtinCommands.test.ts  builtinCommands.ts  commandRegistry.test.ts  commandRegistry.ts
src/components/: ActivityBar.test.tsx  ActivityBar.tsx  BottomPanel.test.tsx  BottomPanel.tsx  CommandPalette.test.tsx  CommandPalette.tsx  ContextMenu.test.tsx  ContextMenu.tsx  EditorArea.test.tsx  EditorArea.tsx  Explorer.test.tsx  Explorer.tsx  HtmlPreview.test.tsx  HtmlPreview.tsx  Icon.tsx  ImageViewer.test.tsx  ImageViewer.tsx  MarkdownView.test.tsx  MarkdownView.tsx  MonacoEditor.tsx  OutputView.tsx  PdfPanel.tsx  PdfViewer.test.tsx  PdfViewer.tsx  QuickOpen.test.tsx  QuickOpen.tsx  Resizer.test.tsx  Resizer.tsx  SearchView.test.tsx  SearchView.tsx  Sidebar.tsx  StatusBar.test.tsx  StatusBar.tsx  TabBar.test.tsx  TabBar.tsx  TerminalPanel.test.tsx  TerminalPanel.tsx  TerminalView.tsx
src/editor/: monacoLanguages.ts
src/hooks/: useCommandKeybindings.test.ts  useCommandKeybindings.ts  useEditorKeybindings.test.ts  useEditorKeybindings.ts  useLayoutKeybindings.test.ts  useLayoutKeybindings.ts  useMenuCommands.test.ts  useMenuCommands.ts  useOpenFileBridge.test.tsx  useOpenFileBridge.ts  useWorkspaceFileWatcher.test.ts  (+3 more)
(+92 files in other folders)
