[package]
name = "lyceum"
version = "0.5.14"
description = "A lightweight, VS Code-inspired research IDE"
authors = ["lyceum"]
edition = "2021"
license = "MIT"
repository = "https://github.com/jake-w-liu/Lyceum"
homepage = "https://github.com/jake-w-liu/Lyceum"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix keeps the lib name unique so it doesn't conflict with the
# bin name (an issue on Windows: https://github.com/rust-lang/cargo/issues/8519).
name = "lyceum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# Funnels a second app launch (double-click / `lyceum .`) into the already
# running process so macOS shows a single dock icon instead of one per process.
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
base64 = "0.22"
libc = "0.2"
notify = "6"

[dev-dependencies]
tempfile = "3"
